fixed h1 no wrap stuff

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,6 @@ body {
 
 h1 {
   text-align: center;
-  white-space: nowrap;
   color: #6767D4;
 }
 
